Added index and yahoo image

--- a/index.html
+++ b/index.html
@@ -78,6 +78,18 @@
 										<li><a href="https://public.tableau.com/app/profile/swetha.kothapallli/viz/Prime_dashboard/prime_Project?publish=yes" class="button">View Project</a></li>
 									</ul>
 								</article>
+
+								<article>
+									<header>
+										<h2><a href="https://github.com/swethakothapalli/Yahoofindata.git">web-scrapping Yahoo Financial data<br />
+										</a></h2>
+									</header>
+									<a href="https://github.com/swethakothapalli/Yahoofindata.git" class="image fit"><img src="images/Yahoo.jpeg" alt="" /></a>
+									<p>In this project we can see a scrapper program that can scrape data from yahoo using yfinance package</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/swethakothapalli/Yahoofindata.git" class="button">View Project</a></li>
+									</ul>
+								</article>
 								
 							</section>
 
