--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Swetha<br />
 						The Analyst Portfolio</h1>
-						<p>DData Analyst skilled in python , sql , excel , tableau, web-scrapping, Data manipulation, Data transformation, Data cleansing | Passionate about extracting business insights from data <a href="https://www.linkedin.com/in/swetha-kothapalli-248594199/">@swetha</a> </p>
+						<p>Data Analyst skilled in python , sql , excel , tableau, web-scrapping, Data manipulation, Data transformation, Data cleansing | Passionate about extracting business insights from data <a href="https://www.linkedin.com/in/swetha-kothapalli-248594199/">@swetha</a> </p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
