--- a/index.html
+++ b/index.html
@@ -49,10 +49,9 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="https://github.com/swethakothapalli/spotifyproject/blob/32c6bb7379d937dd0a9a466056842d6f1bad4fca/spotify_project.ipynb">Data Analysis and Visualization on Spotify data<br />
+									<h2><a href="https://github.com/swethakothapalli/spotifyproject/blob/32c6bb7379d937dd0a9a466056842d6f1bad4fca/spotify_project.ipynb">Spotify Data Analysis and Visualization Project<br />
 									</a></h2>
-									<p>In this project i had done analysis using panads function like  isnull, sort_values, transpose, query, datetime, drop and visualization using matplot lib and seaborn created correlation heat map, regplot, histogram,
-										barplot, lineplot
+									<p>In this project, I conducted a comprehensive analysis of Spotify's music streaming data using Python. Leveraging libraries such as Pandas for data manipulation, NumPy for numerical operations, Matplotlib and Seaborn for data visualization, and BeautifulSoup for web scraping, I transformed raw data into meaningful insights. The project also utilized Scikit-learn to implement machine learning models for predicting song popularity. Key functions included data cleaning, exploratory data analysis, and model evaluation, showcasing my ability to extract and present actionable business insights from complex datasets.
 									</p>
 								</header>
 								<a href="https://github.com/swethakothapalli/spotifyproject/blob/32c6bb7379d937dd0a9a466056842d6f1bad4fca/spotify_project.ipynb" class="image main"><img src="images/Generic-FTR-headers_V10-1920x733.jpg" alt="" /></a>
@@ -64,7 +63,18 @@
 						<!-- Posts -->
 							<section class="posts">
 
-						
+						                                <article>
+                                    <header>
+                                        <h2><a href="https://github.com/swethakothapalli/NMC_webscrapping">web-scrapping National medical commission website<br />
+                                        </a></h2>
+                                    </header>
+                                    <a href="https://github.com/swethakothapalli/NMC_webscrapping" class="image fit"><img src="images/Tableau-Emblem.png" alt="" /></a>
+                                    <p>This project involves web scraping data from the National Medical Commission (NMC) website to extract information about medical colleges and courses. The project utilizes several Python libraries to automate the browsing process, interact with web elements, and process the extracted data.</p>
+                                    <ul class="actions special">
+                                        <li><a href="https://github.com/swethakothapalli/NMC_webscrapping" class="button">View Project</a></li>
+                                    </ul>
+                                </article>
+
 
 
 								<article>
