--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Swetha<br />
-						The Analyst Portfolio</h1>
+						Data Analyst Portfolio</h1>
 						<p>Welcome to my portfolio! I am a proficient Data Analyst with expertise in Python, SQL, Excel, Tableau, and web scraping. My skills encompass data manipulation, transformation, and cleansing, ensuring data integrity and readiness for insightful analysis. With a passion for extracting valuable business insights, I leverage my technical abilities to turn raw data into actionable strategies that drive decision-making and enhance business performance. Explore my projects to see how I harness the power of data to create impactful solutions.<a href="https://www.linkedin.com/in/swetha-kothapalli-248594199/">@swetha</a> </p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
