--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                                         <h2><a href="https://github.com/swethakothapalli/NMC_webscrapping">web-scrapping National medical commission website<br />
                                         </a></h2>
                                     </header>
-                                    <a href="https://github.com/swethakothapalli/NMC_webscrapping" class="image fit"><img src="images/Tableau-Emblem.png" alt="" /></a>
+                                    <a href="https://github.com/swethakothapalli/NMC_webscrapping" class="image fit"><img src="images/national_medical_commission_12e7b6003a.jpeg" alt="" /></a>
                                     <p>This project involves web scraping data from the National Medical Commission (NMC) website to extract information about medical colleges and courses. The project utilizes several Python libraries to automate the browsing process, interact with web elements, and process the extracted data.</p>
                                     <ul class="actions special">
                                         <li><a href="https://github.com/swethakothapalli/NMC_webscrapping" class="button">View Project</a></li>
