--- a/index.html
+++ b/index.html
@@ -49,9 +49,10 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="https://github.com/swethakothapalli/spotifyproject/blob/32c6bb7379d937dd0a9a466056842d6f1bad4fca/spotify_project.ipynb">Spotify Data Analysis and Visualization Project<br />
+									<h2><a href="https://github.com/swethakothapalli/spotifyproject.git">Spotify Music Tracks Data Analysis and Visualization Project<br />
 									</a></h2>
-									<p>In this project, I conducted a comprehensive analysis of Spotify's music streaming data using Python. Leveraging libraries such as Pandas for data manipulation, NumPy for numerical operations, Matplotlib and Seaborn for data visualization, and BeautifulSoup for web scraping, I transformed raw data into meaningful insights. The project also utilized Scikit-learn to implement machine learning models for predicting song popularity. Key functions included data cleaning, exploratory data analysis, and model evaluation, showcasing my ability to extract and present actionable business insights from complex datasets.
+									<p>This project involves the comprehensive analysis of a large dataset of music tracks using Python's data manipulation and visualization libraries. The key objectives were to explore and understand the patterns and relationships between various attributes of the tracks, such as popularity, duration, danceability, energy, loudness, and more.
+
 									</p>
 								</header>
 								<a href="https://github.com/swethakothapalli/spotifyproject/blob/32c6bb7379d937dd0a9a466056842d6f1bad4fca/spotify_project.ipynb" class="image main"><img src="images/Generic-FTR-headers_V10-1920x733.jpg" alt="" /></a>
