--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                                     <a href="https://github.com/swethakothapalli/NMC_webscrapping" class="image fit"><img src="images/national_medical_commission_12e7b6003a.jpeg" alt="" /></a>
                                     <p>This project involves web scraping data from the National Medical Commission (NMC) website to extract information about medical colleges and courses. The project utilizes several Python libraries to automate the browsing process, interact with web elements, and process the extracted data.</p>
                                     <ul class="actions special">
-                                        <li><a href="https://github.com/swethakothapalli/NMC_webscrapping" class="button">View Project</a></li>
+                                        <li><a href="https://github.com/swethakothapalli/NMC_webscrapping/blob/main/NMC_webscraping.py" class="button">View Project</a></li>
                                     </ul>
                                 </article>
 
@@ -84,7 +84,7 @@
 										</a></h2>
 									</header>
 									<a href="https://public.tableau.com/app/profile/swetha.kothapallli/viz/Prime_dashboard/prime_Project?publish=yes" class="image fit"><img src="images/Tableau-Emblem.png" alt="" /></a>
-									<p>This holds my Tableau Dash board</p>
+									<p>I created an interactive and comprehensive Prime Dashboard using Tableau, showcasing my expertise in data visualization and analysis. This project highlights my ability to transform complex datasets into actionable insights through intuitive and visually appealing dashboards. Key features include advanced filtering, dynamic charts, and detailed metrics, enabling users to explore and understand the data effectively. My proficiency in Tableau ensures that stakeholders can make data-driven decisions with confidence.</p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/app/profile/swetha.kothapallli/viz/Prime_dashboard/prime_Project?publish=yes" class="button">View Project</a></li>
 									</ul>
@@ -96,7 +96,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/swethakothapalli/Yahoofindata.git" class="image fit"><img src="images/Yahoo.jpeg" alt="" /></a>
-									<p>In this project we can see a scrapper program that can scrape data from yahoo using yfinance package</p>
+									<p>YahooFindata is a testament to my proficiency in web scraping, providing a comprehensive solution for fetching financial data from Yahoo Finance. Leveraging Python's web scraping libraries such as Yfinance, along with object-oriented programming principles, this project demonstrates my ability to extract structured data from complex web pages efficiently.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/swethakothapalli/Yahoofindata.git" class="button">View Project</a></li>
 									</ul>
